wip(headless-cms): storage id explanation

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
@@ -1,19 +1,22 @@
 ---
-title: Upgrading the Existing CMS Model Plugin Definitions Defined Prior to the v5.33.0
-description: Learn About CMS Model Plugin Definition Upgrade for the v5.33.0
+title: CMS Model Plugin Storage Id Field Property
+description: Learn About CMS Model Plugin Field Definition StorageId Property
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
 
-- how to upgrade existing CMS Model field defintions
+- what is the `storageId` field property
+- how to upgrade existing CMS Model field definition
 
 </Alert>
 
 <Alert type="info" title="Can I use this?">
 
-This feature is available since **v5.33.0**. If you created your project with Webiny v5.33.0 or later, you can skip this article.
+This feature is available since **v5.33.0**.
+  
+If you created your project with Webiny **v5.33.0** or later, you can skip the upgrade part of the article.
 
 </Alert>
 
@@ -23,9 +26,16 @@ As we introduced CMS Model Field aliases in v5.33.0, we introduced a new propert
 
 ### What Is the `Storage ID` Used For?
 
-We use it as the storage path for the given field value in the record. As `fieldId` is now changeable, we cannot store values by the `fieldId` because it would result in the data loss, each time the `fieldId` is changed.
+We use it as the storage path for the given field value in the record. As `fieldId` is now changeable, we cannot store values by the `fieldId` value because it would result in the data loss each time the `fieldId` value has changed.
 
 ### How Is the `Storage ID` Generated?
 
-The `Storage ID` field comprises out of the field type (for example, `text`) and the CMS Model Field `id` property, which is generated via the `nanoid` library.
-The `Storage ID` value is immutable, and it should never change, no matter what.
+The `Storage ID` field comprises out of the field `type` property (`text`, `number`, `object`, etc...) and the `id` property, which is generated via the `nanoid` library.
+
+Here are few examples how the `storageId` property value looks like this:
+* `text@gbureq32f`
+* `object@cbare1kaf`
+
+We are basically joining the field `type` and the `id` properties, because it makes it easier to target the specific field types with custom mappings in the Elasticsearch system deployment.
+
+The `storageId`  value is immutable, and it should never change, no matter what.
