--- a/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
@@ -37,7 +37,7 @@ If you do not have CMS Models defined via code (via `CmsModelPlugin`), you can s
 
 Since we introduced a new property, `storageId`, into CMS Model Field definition, you must add it to your existing CMS Model Field definitions.
 This is only for the CMS models which are created prior to the 5.33.0.
-Please follow [this](/docs/headless-cms/extending/content-models-via-code-storage-id) article.
+Please read the **Upgrading CMS Model Plugin Definitions** of [this](/docs/headless-cms/extending/content-models-via-code-storage-id#upgrading-cms-model-plugin-definitions) article.
 
 
 ## 3. Deploy Your Project
