feat(headless-cms): add note about storageId property in model plugin article

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
@@ -15,7 +15,7 @@ import { Alert } from "@/components/Alert";
 <Alert type="info" title="Can I use this?">
 
 This feature is available since **v5.33.0**.
-  
+
 If you created your project with Webiny **v5.33.0** or later, you can skip the upgrade part of the article.
 
 </Alert>
@@ -33,8 +33,9 @@ We use it as the storage path for the given field value in the record. As `field
 The `Storage ID` field comprises out of the field `type` property (`text`, `number`, `object`, etc...) and the `id` property, which is generated via the `nanoid` library.
 
 Here are few examples how the `storageId` property value looks like this:
-* `text@gbureq32f`
-* `object@cbare1kaf`
+
+- `text@gbureq32f`
+- `object@cbare1kaf`
 
 We are basically joining the field `type` and the `id` properties, because it makes it easier to target the specific field types with custom mappings in the Elasticsearch system deployment.
 
@@ -42,7 +43,11 @@ The `storageId` value should never change, no matter what - you will lose data o
 
 ### Do I Need To Define the `storageId` When Defining the CMS Model Plugin?
 
-Simply, no, you should not define the `storageId` property as we generate that value automatically.  
+Simply, no, you should not define the `storageId` property as we generate that value automatically.
+
+### But What If I Have Already Defined The `storageId` Property Value?
+
+If you have data in that field, and you change the property value, you will lose all the data in it.
 
 ## Upgrading CMS Model Plugin Definitions
 
@@ -57,106 +62,106 @@ So, for example, if you have a model defined:
 
 ```typescript
 const myModel = new CmsModelPlugin({
-    modelId: "myModel",
-    fields: [
-        {
-            id: "id",
-            type: "number",
-            fieldId: "id",
-            label: "ID",
-            settings: {}
-        },
-        {
-            id: "title",
-            type: "text",
-            fieldId: "title",
-            label: "Title",
-            settings: {}
-        },
-        {
-            id: "myObjectField",
-            type: "object",
-            fieldId: "myObjectField",
-            label: "My Object Field",
-            settings: {
-                fields: [
-                    {
-                        id: "date",
-                        type: "datetime",
-                        fieldId: "date",
-                        label: "Date",
-                        settings: {
-                            type: "date"
-                        }
-                    }
-                ]
-            }
-        }
-    ],
-    layout: [],
-    group: {
-        id: "group",
-        name: "Group"
+  modelId: "myModel",
+  fields: [
+    {
+      id: "id",
+      type: "number",
+      fieldId: "id",
+      label: "ID",
+      settings: {}
     },
-    name: "My Model",
-    description: "",
-    titleFieldId: "title"
-})
+    {
+      id: "title",
+      type: "text",
+      fieldId: "title",
+      label: "Title",
+      settings: {}
+    },
+    {
+      id: "myObjectField",
+      type: "object",
+      fieldId: "myObjectField",
+      label: "My Object Field",
+      settings: {
+        fields: [
+          {
+            id: "date",
+            type: "datetime",
+            fieldId: "date",
+            label: "Date",
+            settings: {
+              type: "date"
+            }
+          }
+        ]
+      }
+    }
+  ],
+  layout: [],
+  group: {
+    id: "group",
+    name: "Group"
+  },
+  name: "My Model",
+  description: "",
+  titleFieldId: "title"
+});
 ```
 
 You will need to add the `storageId` property to each of the fields. Don't forget the nested fields in the `object` type field.
 
 ```typescript
 new CmsModelPlugin({
-    modelId: "myModel",
-    fields: [
-        {
-            id: "id",
-            type: "number",
-            fieldId: "id",
-            label: "ID",
-            storageId: "id",// <-- MUST be set to "id"
-            settings: {}
-        },
-        {
-            id: "title",
-            type: "text",
-            fieldId: "title",
-            label: "Title",
-            storageId: "title",// <-- MUST be set to "title"
-            settings: {}
-        },
-        {
-            id: "myObjectField",
-            type: "object",
-            fieldId: "myObjectField",
-            label: "My Object Field",
-            storageId: "myObjectField", // <-- MUST be set to "myObjectField"
-            settings: {
-                fields: [
-                    {
-                        id: "date",
-                        type: "datetime",
-                        fieldId: "date",
-                        label: "Date",
-                        storageId: "date", // <-- MUST be set to "date"
-                        settings: {
-                            type: "date"
-                        }
-                    }
-                ]
-            }
-        }
-    ],
-    layout: [],
-    group: {
-        id: "group",
-        name: "Group"
+  modelId: "myModel",
+  fields: [
+    {
+      id: "id",
+      type: "number",
+      fieldId: "id",
+      label: "ID",
+      storageId: "id", // <-- MUST be set to "id"
+      settings: {}
     },
-    name: "My Model",
-    description: "",
-    titleFieldId: "title"
-})
+    {
+      id: "title",
+      type: "text",
+      fieldId: "title",
+      label: "Title",
+      storageId: "title", // <-- MUST be set to "title"
+      settings: {}
+    },
+    {
+      id: "myObjectField",
+      type: "object",
+      fieldId: "myObjectField",
+      label: "My Object Field",
+      storageId: "myObjectField", // <-- MUST be set to "myObjectField"
+      settings: {
+        fields: [
+          {
+            id: "date",
+            type: "datetime",
+            fieldId: "date",
+            label: "Date",
+            storageId: "date", // <-- MUST be set to "date"
+            settings: {
+              type: "date"
+            }
+          }
+        ]
+      }
+    }
+  ],
+  layout: [],
+  group: {
+    id: "group",
+    name: "Group"
+  },
+  name: "My Model",
+  description: "",
+  titleFieldId: "title"
+});
 ```
 
 If you forget to do this after the upgrade to the v5.33.0, you will not get any data back from your queries.
