--- a/src/docs/5.33.x/headless-cms/references/lifecycle-events.mdx
+++ b/src/docs/5.33.x/headless-cms/references/lifecycle-events.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="danger" title="Deprecation of lifecycle events created before 5.33.0">
 In the 5.33.0 we changed the property names which define the lifecycle events in the Headless CMS.
-Old ones are still available, but marked as deprecated, and they will be removed in 5.35.0.
+Old ones are still available, but are marked as deprecated. They will be removed in 5.35.0.
 </Alert>
 
 <Alert type="success" title="What you'll learn">
@@ -107,7 +107,7 @@ Please note that in between `onSystemBeforeInstall` and `onSystemAfterInstall` w
 
 ### onGroupBeforeCreate
 
-This event is triggered before new group is stored into the database.
+This event is triggered before a new group is stored into the database.
 
 #### Event arguments
 
@@ -134,7 +134,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onGroupAfterCreate
 
-This event is triggered after new group is stored into the database.
+This event is triggered after a new group is stored into the database.
 
 #### Event arguments
 
@@ -157,7 +157,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onGroupBeforeUpdate
 
-This event is triggered before group is changed and stored into the database.
+This event is triggered before a group is changed and stored into the database.
 
 #### Event arguments
 
@@ -184,7 +184,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onGroupAfterUpdate
 
-This event is triggered before group is changed and stored into the database.
+This event is triggered before a group is changed and stored into the database.
 
 #### Event arguments
 
@@ -208,7 +208,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onGroupBeforeDelete
 
-This event is triggered before group is deleted from the database.
+This event is triggered before a group is deleted from the database.
 
 #### Event arguments
 
@@ -234,7 +234,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onGroupAfterDelete
 
-This event is triggered after group is deleted from the database.
+This event is triggered after a group is deleted from the database.
 
 #### Event arguments
 
@@ -282,7 +282,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelBeforeCreate
 
-This event is triggered before new model is stored into the database.
+This event is triggered before a new model is stored into the database.
 
 #### Event arguments
 
@@ -308,7 +308,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelAfterCreate
 
-This event is triggered before new model is stored into the database.
+This event is triggered before a new model is stored into the database.
 
 #### Event arguments
 
@@ -331,7 +331,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelBeforeCreateFrom
 
-This event is triggered before newly cloned model is stored into the database.
+This event is triggered before a newly cloned model is stored into the database.
 
 #### Event arguments
 
@@ -358,7 +358,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelAfterCreateFrom
 
-This event is triggered after newly cloned model is stored into the database.
+This event is triggered after a newly cloned model is stored into the database.
 
 #### Event arguments
 
@@ -382,7 +382,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelBeforeUpdate
 
-This event is triggered before model is changed and stored into the database.
+This event is triggered before a model is changed and stored into the database.
 
 #### Event arguments
 
@@ -406,7 +406,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelAfterUpdate
 
-This event is triggered after model is changed and stored into the database.
+This event is triggered after a model is changed and stored into the database.
 
 #### Event arguments
 
@@ -430,7 +430,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelBeforeDelete
 
-This event is triggered before model is deleted from the database.
+This event is triggered before a model is deleted from the database.
 
 #### Event arguments
 
@@ -453,7 +453,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onModelAfterDelete
 
-This event is triggered after model is deleted from the database.
+This event is triggered after a model is deleted from the database.
 
 #### Event arguments
 
@@ -502,13 +502,13 @@ new ContextPlugin<CmsContext>(async context => {
 <Alert type="info">
 
 Note that `storageEntry`, `originalStorageEntry`, `latestStorageEntry` and `publishedStorageEntry` are objects derived from the `entry` object which we want to store into the database.
-Those new objects have `StorageTransformPlugin` run on them to prepare them to be stored. To find out why we use `StorageTransformPlugin`, read about it in this [article](./storage-transform-plugin).
+Those new objects have `StorageTransformPlugin` run on them to prepare them to be stored. [Find out why we use `StorageTransformPlugin` here](./storage-transform-plugin).
 
 </Alert>
 
 ### onEntryBeforeCreate
 
-This event is triggered before entry is stored into the database.
+This event is triggered before an entry is stored into the database.
 
 #### Event arguments
 
@@ -544,7 +544,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterCreate
 
-This event is triggered after entry is stored into the database.
+This event is triggered after an entry is stored into the database.
 
 #### Event arguments
 
@@ -634,7 +634,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforeUpdate
 
-This event is triggered before entry is changed and stored into the database.
+This event is triggered before an entry is changed and stored into the database.
 
 #### Event arguments
 
@@ -672,7 +672,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterUpdate
 
-This event is triggered after entry is changed and stored into the database.
+This event is triggered after an entry is changed and stored into the database.
 
 #### Event arguments
 
@@ -750,7 +750,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforeDeleteRevision
 
-This event is triggered before entry revision is deleted from the database.
+This event is triggered before an entry revision is deleted from the database.
 
 #### Event arguments
 
@@ -777,7 +777,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterDeleteRevision
 
-This event is triggered after entry revision is deleted from the database.
+This event is triggered after an entry revision is deleted from the database.
 
 #### Event arguments
 
@@ -801,7 +801,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforePublish
 
-This event is triggered before entry is published.
+This event is triggered before an entry is published.
 
 #### Event arguments
 
@@ -828,7 +828,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterPublish
 
-This event is triggered after entry is published.
+This event is triggered after an entry is published.
 
 #### Event arguments
 
@@ -852,7 +852,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforeUnpublish
 
-This event is triggered before entry is unpublished.
+This event is triggered before an entry is unpublished.
 
 #### Event arguments
 
@@ -879,7 +879,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterUnpublish
 
-This event is triggered after entry is unpublished.
+This event is triggered after an entry is unpublished.
 
 #### Event arguments
 
@@ -903,7 +903,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforeRequestChanges
 
-This event is triggered before request changes entry object is stored to the database.
+This event is triggered before a request changes entry object is stored to the database.
 
 #### Event arguments
 
@@ -930,7 +930,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterRequestChanges
 
-This event is triggered after request changes entry object is stored to the database.
+This event is triggered after a request changes entry object is stored to the database.
 
 #### Event arguments
 
@@ -954,7 +954,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryBeforeRequestReview
 
-This event is triggered before request review entry object is stored to the database.
+This event is triggered before a request review entry object is stored to the database.
 
 #### Event arguments
 
@@ -981,7 +981,7 @@ new ContextPlugin<CmsContext>(async context => {
 
 ### onEntryAfterRequestReview
 
-This event is triggered after request review entry object is stored to the database.
+This event is triggered after a request review entry object is stored to the database.
 
 #### Event arguments
 
