fix(headless-cms): further copy tidy

--- a/src/docs/5.33.x/headless-cms/references/lifecycle-events.mdx
+++ b/src/docs/5.33.x/headless-cms/references/lifecycle-events.mdx
@@ -1059,7 +1059,7 @@ const handler = createHandler({
 
 <Alert type="warning">
 
-Please, be aware that the order of subscribing matters, so if you want some event subscription to be executed before some other one, add it first.
+Please be aware that the order of subscribing does matter: if you want some event subscription to be executed before some other one, add it first.
 
 </Alert>
 
